// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creating a default config file 1`] = `
"name: test
language: javascript
appmap_dir: tmp/appmap
packages:
  - path: .
    exclude:
      - node_modules
      - .yarn
"
`;

exports[`finish signal is handled 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "server.mjs:1",
              "name": "start",
              "static": true,
              "type": "function",
            },
          ],
          "name": "server",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "server",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "start",
      "parameters": [],
      "path": "server.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`forwarding signals to the child 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "daemon.mjs:3",
              "name": "stop",
              "static": true,
              "type": "function",
            },
          ],
          "name": "daemon",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "daemon",
      "event": "call",
      "id": 1,
      "lineno": 3,
      "method_id": "stop",
      "parameters": [],
      "path": "daemon.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`forwards SIGINT (ctrl-c) properly to the grandchild having active setInterval 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "interval.js:1",
              "name": "f",
              "static": true,
              "type": "function",
            },
          ],
          "name": "interval",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "interval",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "f",
      "parameters": [],
      "path": "interval.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "Number",
        "value": "1",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping a custom Error class with a message property 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "inspect.js:5",
              "name": "f",
              "static": true,
              "type": "function",
            },
          ],
          "name": "inspect",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "inspect",
      "event": "call",
      "id": 1,
      "lineno": 5,
      "method_id": "f",
      "parameters": [],
      "path": "inspect.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "InspectError",
        "object_id": 1,
        "value": "[InspectError: Inspect Error]",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping a simple script 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "index.js:10",
              "name": "promised",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:16",
              "name": "immediatePromise",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:20",
              "name": "throws",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:29",
              "name": "argsInClosure",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:34",
              "name": "incr",
              "static": true,
              "type": "function",
            },
            {
              "location": "index.js:5",
              "name": "foo",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "eventUpdates": {
    "10": {
      "elapsed": 31.337,
      "event": "return",
      "exceptions": [
        {
          "class": "Error",
          "message": "throws intentionally",
          "object_id": 5,
        },
      ],
      "id": 10,
      "parent_id": 9,
      "return_value": {
        "class": "Promise",
        "object_id": 3,
        "value": "Promise { <rejected> }",
      },
      "thread_id": 0,
    },
    "8": {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 7,
      "return_value": {
        "class": "Promise<String>",
        "object_id": 2,
        "value": "Promise { 'promised return' }",
      },
      "thread_id": 0,
    },
  },
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 20,
      "method_id": "throws",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "exceptions": [
        {
          "class": "Error",
          "message": "throws intentionally",
          "object_id": 1,
        },
      ],
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 3,
      "lineno": 5,
      "method_id": "foo",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "44",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 3,
      "return_value": {
        "class": "Number",
        "value": "88",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 5,
      "lineno": 5,
      "method_id": "foo",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "42",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 6,
      "parent_id": 5,
      "return_value": {
        "class": "Number",
        "value": "84",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 7,
      "lineno": 10,
      "method_id": "promised",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 7,
      "return_value": {
        "class": "Promise",
        "object_id": 2,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 9,
      "lineno": 10,
      "method_id": "promised",
      "parameters": [
        {
          "class": "Boolean",
          "name": "ok",
          "value": "false",
        },
      ],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 10,
      "parent_id": 9,
      "return_value": {
        "class": "Promise",
        "object_id": 3,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 11,
      "lineno": 16,
      "method_id": "immediatePromise",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 12,
      "parent_id": 11,
      "return_value": {
        "class": "Promise",
        "object_id": 4,
        "value": "Promise { 'immediate' }",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 13,
      "lineno": 29,
      "method_id": "argsInClosure",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 14,
      "lineno": 34,
      "method_id": "incr",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 15,
      "parent_id": 14,
      "return_value": {
        "class": "Number",
        "value": "0",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 16,
      "lineno": 34,
      "method_id": "incr",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 17,
      "parent_id": 16,
      "return_value": {
        "class": "Number",
        "value": "1",
      },
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 18,
      "parent_id": 13,
      "thread_id": 0,
    },
    {
      "defined_class": "index",
      "event": "call",
      "id": 19,
      "lineno": 20,
      "method_id": "throws",
      "parameters": [],
      "path": "index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "exceptions": [
        {
          "class": "Error",
          "message": "throws intentionally",
          "object_id": 5,
        },
      ],
      "id": 20,
      "parent_id": 19,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping an extensionless CommonJS file 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "extensionless:2",
              "name": "f",
              "static": true,
              "type": "function",
            },
          ],
          "name": "extensionless",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "extensionless",
      "event": "call",
      "id": 1,
      "lineno": 2,
      "method_id": "f",
      "parameters": [],
      "path": "extensionless",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping an mjs script 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "location": "subproject/util.mjs:1",
                  "name": "twice",
                  "static": true,
                  "type": "function",
                },
              ],
              "name": "util",
              "type": "class",
            },
          ],
          "name": "subproject",
          "type": "package",
        },
        {
          "children": [
            {
              "location": "index.mjs:3",
              "name": "helloWorld",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "index",
      "event": "call",
      "id": 1,
      "lineno": 3,
      "method_id": "helloWorld",
      "parameters": [],
      "path": "index.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "util",
      "event": "call",
      "id": 2,
      "lineno": 1,
      "method_id": "twice",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "21",
        },
      ],
      "path": "subproject/util.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 3,
      "parent_id": 2,
      "return_value": {
        "class": "Number",
        "value": "42",
      },
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping generator functions 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "generator.js:1",
              "name": "f1",
              "static": true,
              "type": "function",
            },
          ],
          "name": "generator",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "generator",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "f1",
      "parameters": [],
      "path": "generator.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "",
        "object_id": 1,
        "value": "Object [Generator] {}",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping js class methods and constructors containing super keyword 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "class.js:10",
              "name": "m1",
              "static": false,
              "type": "function",
            },
            {
              "location": "class.js:5",
              "name": "constructor",
              "static": false,
              "type": "function",
            },
          ],
          "name": "A",
          "type": "class",
        },
        {
          "children": [
            {
              "location": "class.js:28",
              "name": "constructor",
              "static": false,
              "type": "function",
            },
            {
              "location": "class.js:33",
              "name": "m1",
              "static": false,
              "type": "function",
            },
          ],
          "name": "B",
          "type": "class",
        },
      ],
      "name": "simple",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "A",
      "event": "call",
      "id": 1,
      "lineno": 5,
      "method_id": "constructor",
      "parameters": [],
      "path": "class.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "defined_class": "B",
      "event": "call",
      "id": 3,
      "lineno": 28,
      "method_id": "constructor",
      "parameters": [],
      "path": "class.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 4,
      "lineno": 5,
      "method_id": "constructor",
      "parameters": [],
      "path": "class.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 5,
      "parent_id": 4,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 6,
      "parent_id": 3,
      "thread_id": 0,
    },
    {
      "defined_class": "B",
      "event": "call",
      "id": 7,
      "lineno": 33,
      "method_id": "m1",
      "parameters": [],
      "path": "class.js",
      "receiver": {
        "class": "B",
        "object_id": 1,
        "value": "B {}",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 8,
      "lineno": 10,
      "method_id": "m1",
      "parameters": [],
      "path": "class.js",
      "receiver": {
        "class": "B",
        "object_id": 1,
        "value": "B {}",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 9,
      "parent_id": 8,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 10,
      "parent_id": 7,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "simple",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;
